[New] Allow case insensitive usernames in privilege